Stuck not getting any correct output now

--- a/style.css
+++ b/style.css
@@ -89,3 +89,31 @@ body{
 h1{
   color: black;
 }
+
+#game-over-area {
+  text-align: center;
+  padding: 50px;
+  width: 50%;
+  margin-top: 50px;
+}
+
+h2 {
+  color: black;
+  font-size: 25px;
+  margin-top: 0px;
+}
+
+button {
+  background-color: transparent;
+  color: magenta;
+  padding: 10px;
+  font-size: 20px;
+}
+
+.hidden {
+  display: none;
+}
+
+.visible {
+  display: block;
+}
